Fix spacing in section 2

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ img {
   font-size: 36px;
   font-weight: 800;
   color: #1F2937;
+  margin-bottom: 50px;
 }
 
 .random-info-pic {
